unpackaged/main/default/objects/Chargeoff_Summary__c/Chargeoff_Summary__c.object-meta.xml
<CustomObject>
    <label>Chargeoff Summary</label>
    <nameField>
        <label>Chargeoff Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chargeoff Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>