unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chargeoff Summaries</relationshipLabel>
    <relationshipName>Chargeoff_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>