unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Analyst_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Behavior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there an action by the Analyst that contributed to the chargeoff</description>
    <label>Analyst Behavior</label>
    <type>Checkbox</type>
</CustomField>