unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <formula>Contract__r.Annual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>