unpackaged/main/default/objects/Chargeoff_Summary__c/fields/BK_Business__c.field-meta.xml
<CustomField>
    <fullName>BK_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates of the Business went into Bankruptcy</description>
    <label>BK - Business</label>
    <type>Checkbox</type>
</CustomField>