unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <formula>Opportunity__r.Broker_Account__r.Name</formula>
    <label>Broker</label>
    <type>Text</type>
</CustomField>