unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Business_Closed__c.field-meta.xml
<CustomField>
    <fullName>Business_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Business has closed</description>
    <label>Business Closed</label>
    <type>Checkbox</type>
</CustomField>