unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Buyback__c.field-meta.xml
<CustomField>
    <fullName>Buyback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback</label>
    <type>Checkbox</type>
</CustomField>