unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Customer Service</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Chargeoff_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>