unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Chargeoff Summaries</relationshipLabel>
    <relationshipName>Chargeoff_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>