unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Chargeoff Summaries</relationshipLabel>
    <relationshipName>Chargeoff_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>