unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <formula>Opportunity__r.Funded_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>