unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding</label>
    <referenceTo>FPC_Funding_del__c</referenceTo>
    <relationshipLabel>Chargeoff Summaries</relationshipLabel>
    <relationshipName>Chargeoff_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>