unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Internal_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Internal_Credit_Analyst__c</fullName>
    <formula>Opportunity__r.Internal_Credit_Analyst__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Credit Analyst</label>
    <type>Text</type>
</CustomField>