unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Internal_Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Funding_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Internal_Funding_Status__c)</formula>
    <label>Internal Funding Status</label>
    <type>Text</type>
</CustomField>