unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <description>The Loan number for this Chargeoff Summary</description>
    <label>Loan Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>