unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Post_Funded_Findings__c.field-meta.xml
<CustomField>
    <fullName>Post_Funded_Findings__c</fullName>
    <label>Post-Funded Findings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Critical Error</fullName>
            </value>
            <value>
                <fullName>Notable</fullName>
            </value>
            <value>
                <fullName>No Findings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>