unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Pre_Funded_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Funded_Review_Notes__c</fullName>
    <label>Pre-Funded Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>