unpackaged/main/default/objects/Chargeoff_Summary__c/fields/Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Status__c</fullName>
    <description>The overall Status of the Chargeoff Summary for the loan</description>
    <label>Recovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Uncollectable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>